--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,39 @@
-
 .background {
   viewport-fill: red;
 }
 
 
-#myLabel {
-  fill: azure;
+.frame {
+  viewport-fill: red;
+}
+
+.blankLabel {
+  fill: yellow;
   letter-spacing: 5;
-  font-size: 55;
+  font-size: 75;
   font-family: System-Bold;
   text-length: 32;
   text-anchor: middle;
-  opacity: 0.5; 
-  x: 50%;
-  y: 14%;
+  opacity: 0.0; 
+  x: 40%;
+  y: 20%;
   
 }
+
+.showLabel {
+  fill: purple;
+  letter-spacing: 2;
+  font-size: 30;
+  font-family: System-Bold;
+  text-length: 32;
+  text-anchor: middle;
+  opacity: 0.7; 
+  x: 50%;
+  y: 90%;
+  
+}
+
+
 .label {
   fill: azure;
   font-size: 11;
@@ -40,13 +58,94 @@
   opacity: 1.0; 
 }
 
-
-.labelpurple {
-  fill: blueviolet;
-  letter-spacing: 5;
-  font-size: 16;
+.labellightblue {
+  fill: aqua;
+  letter-spacing: 1;
+  font-size: 11;
   font-family: System-Bold;
   text-length: 32;
-  opacity: 1.0
+  opacity: 0.7;
+  text-anchor: end;
 }
 
+.labelpurple {
+  fill: deeppink;
+  letter-spacing: 2;
+  font-size: 20;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  text-anchor: middle;
+  y: 97%;
+  x: 50%;
+}
+
+.labelyellow {
+  fill: yellow;
+  font-size: 50;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  text-anchor: middle;
+  x: 50%;
+  y: 12%;
+}
+
+.foreground-fill{ 
+  fill:fb-white;
+  opacity: 0.3;
+}
+
+.staranimate {
+  width: 100%;
+  height: 100%;
+  x: -4%; 
+  y: -5%;  
+}
+
+.menu {
+  width: 100%;
+  height: 100%;
+  x: -77%; 
+  y: -5%;  
+}
+
+.menubutton {
+  fill: white;
+  font-size: 50;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  x: -77%; 
+  y: -5%;  
+}
+
+.ballbutton {
+  fill: white;
+  font-size: 50;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  x: -77%; 
+  y: 20%;  
+}
+
+.ufobutton {
+  fill: white;
+  font-size: 50;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  x: -77%; 
+  y: 5%;  
+}
+
+.bonebutton {
+  fill: white;
+  font-size: 50;
+  font-family: System-Bold;
+  text-length: 32;
+  opacity: 0.7;
+  x: -77%; 
+  y: 10%;  
+}
