--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,13 @@
   y: -5%;  
 }
 
+.cuteanimate {
+  width: 100%;
+  height: 100%;
+  x: 0%; 
+  y: 0%;  
+}
+
 .menu {
   width: 100%;
   height: 100%;
@@ -116,8 +123,8 @@
   font-family: System-Bold;
   text-length: 32;
   opacity: 0.7;
-  x: -77%; 
-  y: -5%;  
+  x: 10%; 
+  y: 85%;  
 }
 
 .ballbutton {
@@ -126,8 +133,8 @@
   font-family: System-Bold;
   text-length: 32;
   opacity: 0.7;
-  x: -77%; 
-  y: 20%;  
+  x: 10%; 
+  y: 75%;  
 }
 
 .ufobutton {
@@ -136,8 +143,8 @@
   font-family: System-Bold;
   text-length: 32;
   opacity: 0.7;
-  x: -77%; 
-  y: 5%;  
+  x: 10%; 
+  y: 65%;  
 }
 
 .bonebutton {
@@ -146,6 +153,6 @@
   font-family: System-Bold;
   text-length: 32;
   opacity: 0.7;
-  x: -77%; 
-  y: 10%;  
+  x: 10%; 
+  y: 55%;  
 }
