--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
   text-anchor: middle;
   opacity: 0.7; 
   x: 50%;
-  y: 90%;
+  y: 70%;
   
 }
 
@@ -71,7 +71,7 @@
 .labelpurple {
   fill: deeppink;
   letter-spacing: 2;
-  font-size: 20;
+  font-size: 30;
   font-family: System-Bold;
   text-length: 32;
   opacity: 0.7;
@@ -91,10 +91,7 @@
   y: 12%;
 }
 
-.foreground-fill{ 
-  fill:fb-white;
-  opacity: 0.3;
-}
+
 
 .staranimate {
   width: 100%;
@@ -155,4 +152,11 @@
   opacity: 0.7;
   x: 10%; 
   y: 55%;  
+}
+
+.clear{
+  opacity: 0.7;
+}
+.none{
+  opacity: 0.0;
 }
